--- a/MyLittleRimPony/About/Changelog.txt
+++ b/MyLittleRimPony/About/Changelog.txt
@@ -1,4 +1,4 @@
-Version 3.14.9 (November 6th 2022)
+Version 3.15.9 (November 7th 2022)
 
 * Biotech: Added child-equippable Rainbow Dash plushie (+2 to movement speed; does not affect melee hit chance or shooting accuracy).
 * Biotech: Added child-equippable Starlight Glimmer plushie.
@@ -15,19 +15,22 @@ Version 3.14.9 (November 6th 2022)
 	* These recipes can only be performed by a mechanitor, and are unlocked once you have researched the relevant technologies.
 * Biotech: Added a recipe to the Nightmare Moon statue which lets you request a high subcore. Doing so requires 2250 silver, 750 chocolate and 15 hemogen packs, but you won't be forced to sacrifice a pawn or prisoner, thus avoiding the associated mood debuffs.
 * Biotech: The NPC faction has welcomed various xenotypes into the fold. They are now 65% baseliner and 5% each of dirtmoles, pigskins, imps, yttakin, genies, neanderthals and highmates. Hussars, meanwhile, still only have a chance of appearing as elite mercenaries, while sanguophages and wasters will not appear at all (they refused to partake in all of the fun and magic, the miserable gits).
+* Core: Added a file containing 200 random words to use for NPC faction pawns, though you may see some weird combinations as a result.
 * Combat Extended: Added bulk and worn bulk for child-equippable plushies.
+* Simple Sidearms: Added weapon tag maps for the wife thrower and rainbow laser.
 * Vanilla Backgrounds Expanded: Added one new background.
 * XML Extensions: Added option to allow the child-equippable Rainbow Dash plushie to give the same bonuses as the adult version.
-(NOT YET FIXED) * Core: Fixed 'Generated pawn incapable of violence' error.
+(STILL NOT FIXED AFTER FIVE BASTARDING DAYS) * Core: Fixed 'Generated pawn incapable of violence' error.
 * Core: NPC faction leaders are now equipped with marine armour (cataphract if Royalty is enabled) and rainbow lasers.
 * Core: NPC faction pawns who used ranged weapons should no longer spawn with the 'Brawler' trait.
+* Core: Changed the description of the NPC faction.
 * Core: Nightmare Moon now demands both 125 chocolate and 10 industrial medicine before she will give you any glitterworld medicine.
-* Core: Increased amount of random names for NPC faction pawns, though you may see some weird combinations as a result.
 * Royalty: Updated 'request detoxifier stomach' recipe to reflect the fact it is now called a 'sterilising stomach.'
 * Royalty: Fixed the Harmony chip not increasing bandwidth.
 * Royalty: Fixed recipe to request a reprocessor stomach using the wrong item name in the bill list.
 * Ideology: The patch which applies plushie bonuses to the harmony chip now checks to see if Royalty is enabled first.
 * Biotech: Fixed plushie trader not stocking child-equippable plushies.
+* Biotech: Fixed missing space in label for Button Mash plushie.
 * RimPonk: Removed patches which add pawns from this mod to the NPC faction.
 
 Version 3.0.0 (October 27th 2022)
