--- a/MyLittleRimPony/About/Changelog.txt
+++ b/MyLittleRimPony/About/Changelog.txt
@@ -1,6 +1,34 @@
-Version 3.15.9 (November 7th 2022)
+Version 3.28.19 (November 23rd 2022)
 
-* Biotech: Added child-equippable Rainbow Dash plushie (+2 to movement speed; does not affect melee hit chance or shooting accuracy).
+* Biotech: Would you prefer your Sweetie Bots to actually move? Say no more!
+	* Added ability to create Sweetie Bot mechanoids.
+	* Require high mechtech to unlock.
+	* Created at a large gestator after two cycles.
+	* Move very fast and are equipped with a rainbow laser.
+	* Can also extinguish fires, but are unable to jump.
+	* Require 200 steel, 75 plasteel, a high subcore, 5 components and 5 bandwidth.
+* Core: Added the magic mirror (from Equestria Girls) as a building capable of generating power.
+	* Generates 25000W of power.
+	* Research level is Ultra with a base cost of 35000.
+	* Research requires a hi-tech research bench and multi-analyser.
+	* Building one requires 16 Construction, 100 components, 50 advanced components, 1500 each of plasteel, steel and uranium, and a Sunset Shimmer plushie. Note that the plushie cannot be manufactured; it can only be acquired from quests or exotic goods vendors.
+* Core: Added Sunset Shimmer plushie. Since she can't be equipped, she can be found under the 'Manufactured' category.
+* MedPod: Added a patch which will prevent pods from attempting to heal the 'pony plushie' hediff.
+* Vanilla Achievements Expanded: Added achievement to acquire a Sunset Shimmer plush.
+* Vanilla Achievements Expanded: Added achievement to build the magic mirror.
+* Core: Fixed 'Config error in Brony_Mercenary_Grenadier: required apparel can't be worn together (Apparel_FlakPants, Apparel_Pants)' error.
+* Core: Fixed some patches related to loading screen tips not being applied correctly.
+* Core: Fixed NPC faction settlements refusing to buy plushies.
+* Addictol: Patches related to this mod will now work whether you are using the 1.3 or 1.4 version.
+* Addictol: Reduced the amount of addictol sold by NPC faction settlements to 3 (was 6).
+* Addictol: Reduced the amount of addictol sold by NPC faction combat suppliers to 1 (was 1-3).
+
+Version 3.22.13 (November 13th 2022)
+
+* Core: Added a file containing 200 random words to use for NPC faction pawn names, though you may see some weird combinations as a result.
+* Core: The NPC faction now employs mercenary grenadiers.
+* Ideology: Added NPC faction mining, hunting, logging and farming camps.
+* Biotech: Added child-equippable Rainbow Dash plushie (+2 to movement speed).
 * Biotech: Added child-equippable Starlight Glimmer plushie.
 * Biotech: Added the ability to request 5 hemogen packs from Nightmare Moon.
 	* She demands 1000 silver for this service, meaning you are effectively paying 40 times the market value (since 5 hemogen packs have a total market value of 25). As such, making this request should always be considered a last resort.
@@ -13,18 +41,19 @@ Version 3.15.9 (November 7th 2022)
 	* Remote shielder
 	* Repair probe
 	* These recipes can only be performed by a mechanitor, and are unlocked once you have researched the relevant technologies.
-* Biotech: Added a recipe to the Nightmare Moon statue which lets you request a high subcore. Doing so requires 2250 silver, 750 chocolate and 15 hemogen packs, but you won't be forced to sacrifice a pawn or prisoner, thus avoiding the associated mood debuffs.
-* Biotech: The NPC faction has welcomed various xenotypes into the fold. They are now 65% baseliner and 5% each of dirtmoles, pigskins, imps, yttakin, genies, neanderthals and highmates. Hussars, meanwhile, still only have a chance of appearing as elite mercenaries, while sanguophages and wasters will not appear at all (they refused to partake in all of the fun and magic, the miserable gits).
-* Core: Added a file containing 200 random words to use for NPC faction pawns, though you may see some weird combinations as a result.
+* Biotech: Added a recipe to the Nightmare Moon statue which lets you request a high subcore. Doing so requires 2250 silver, 750 chocolate and 25 hemogen packs, but you won't be forced to sacrifice a pawn or prisoner, thus avoiding the associated mood debuffs.
+* Biotech: The NPC faction has welcomed various xenotypes into the fold. They are now 70% baseliner and 5% each of dirtmoles, pigskins, imps, yttakin, genies and neanderthals. Hussars, meanwhile, still only have a chance of appearing as elite mercenaries, while highmates, sanguophages and wasters will not appear at all (the latter two refused to partake in all of the fun and magic, the miserable gits).
 * Combat Extended: Added bulk and worn bulk for child-equippable plushies.
+* Replimat: Added a recipe to the Nightmare Moon statue which lets you request an isolinear module in exchange for 9000 chocolate (thus making it cost about 27000 silver compared to 18000 normally). The recipe will become available once you have researched molecular nutrient resequencing.
 * Simple Sidearms: Added weapon tag maps for the wife thrower and rainbow laser.
-* Vanilla Backgrounds Expanded: Added one new background.
+* Vanilla Backgrounds Expanded: Added one new (very basic) background.
 * XML Extensions: Added option to allow the child-equippable Rainbow Dash plushie to give the same bonuses as the adult version.
-(STILL NOT FIXED AFTER FIVE BASTARDING DAYS) * Core: Fixed 'Generated pawn incapable of violence' error.
 * Core: NPC faction leaders are now equipped with marine armour (cataphract if Royalty is enabled) and rainbow lasers.
 * Core: NPC faction pawns who used ranged weapons should no longer spawn with the 'Brawler' trait.
+* Core: Melee brony mercenaries will now spawn with the 'Brawler' trait.
 * Core: Changed the description of the NPC faction.
 * Core: Nightmare Moon now demands both 125 chocolate and 10 industrial medicine before she will give you any glitterworld medicine.
+* Core: Removed disallowed traits from the starting pawns in the brony community scenario. They can now be wimps, pyromaniacs or have chemical needs.
 * Royalty: Updated 'request detoxifier stomach' recipe to reflect the fact it is now called a 'sterilising stomach.'
 * Royalty: Fixed the Harmony chip not increasing bandwidth.
 * Royalty: Fixed recipe to request a reprocessor stomach using the wrong item name in the bill list.
