--- a/MyLittleRimPony/About/Changelog.txt
+++ b/MyLittleRimPony/About/Changelog.txt
@@ -1,8 +1,8 @@
-Version 6.0.0 - The Localisation Update (August 8th 2024)
+Version 6.0.0 (August 8th 2024)
 
 NOTE TO SELF: Check for and delete empty files.
 
-* Added full French localisation. Ajout de la localisation complète en français.
+* Added French localisation. Ajout de la localisation en français.
 * Core: Removed support for version 1.4 of RimWorld.
 * Core: Removed character quotes from the lists of tips.
 * Core: Added ruined plushies.
@@ -23,17 +23,25 @@ NOTE TO SELF: Check for and delete empty files.
 * Biotech: Added Diamond Dog archers.
 	* Equipped with plate armour, like their melee counterparts.
 	* Armed with a greatbow if Anomaly isn't enabled; if it is, they will use nerve spikers instead.
+* XML Extensions: Added an option to change the texture of the Twilight Sparkle plushie back to the old one.
+* Core: Changed the texture of the Twilight Sparkle plushie.
 * Core: The plushie recycling recipe has been updated to work with ruined plushies; you can no longer use it to recycle intact ones.
 * Core: The research tracker has been moved to the main DLL file; as a result, Harmony is now required to use this mod.
 * Core: Removed Manifest.xml file.
 * Core: Reduced the number of times thought effects from party cannons can be stacked to 1 (was 3).
 * Core: Reduced the pain reduction of plushies to 5% (was 10).
 * Core: Nightmare Moon is no longer accepting item returns.
-(NYT) * Core: Fixed an issue which could cause a pawn to have both the brony and anti brony traits at once.
+* Core: Fixed an issue which could cause a pawn to have both the brony and anti brony traits at once.
 * Core: Fixed the bulk psychite tea recipe at the Daybreaker statue not being unlocked when the relevant research was completed.
 * Core: Fixed incorrect description for the request rice recipe at the Nightmare Moon statue.
 * Core: Fixed incorrect description on the convert uranium to silver recipe.
 * Core: Fixed incorrect label on the purchasing bluefur recipe.
+* Core: The Stone Exchange no longer breaks down.
+* Core: The Fabric Exchange no longer breaks down.
+* Core: Pawns with the psychically dull and psychically deaf traits are no longer immune to the mood-boosting effect of the party cannon.
+* Core: Changed the sound heard when equipping a rainbow laser.
+* Royalty: Increased the length of time pawns you use the improve relations psycast on will wander around for to 10 seconds (was 3).
+* Royalty: Increased the radius that pawns you use the improve relations psycast on will wander around in to 6 (was 9).
 * Anomaly: All Thingpone recipes now require half the amount of twisted meat as they do silver, since I felt it was too easy to get stuff.
 	* Deadlife shell: 30 silver and 15 twisted meat.
 	* Voidsight serum: 90 silver and 45 twisted meat.
@@ -42,6 +50,7 @@ NOTE TO SELF: Check for and delete empty files.
 	* Mind-numb serum: 120 silver and 60 twisted meat.
 	* Ghoul resurrection serum: 90 silver and 45 twisted meat.
 * Anomaly: Increased twisted meat cost of acquiring a shard from Thingpone to 500 (was 250).
+* Addictol: The patch for this mod now only checks for the 1.5 version by Ganjaman.
 * Combat Extended: Updated a few patches.
 	* Aggro turrets: Removed recoil.
 	* Rainbow Laser: Added recoil.
