--- a/MyLittleRimPony/Biotech/Languages/French/DefInjected/ThoughtDefs/MLRP_BiotechThoughts_FR.xml
+++ b/MyLittleRimPony/Biotech/Languages/French/DefInjected/ThoughtDefs/MLRP_BiotechThoughts_FR.xml
@@ -22,7 +22,7 @@
 	<MLPXenotypeAppreciation.stages.fellow_pony_xenotype.label>compagnon xénotype du poney</MLPXenotypeAppreciation.stages.fellow_pony_xenotype.label>
 	
 	<!--EN: Izzy Moonbow plush-->
-	<MLRP_IzzyThought.stages.Izzy_Moonbow_plush.label>peluche de Izzy Moonbow</MLRP_IzzyThought.stages.Izzy_Moonbow_plush.label>
+	<MLRP_IzzyPlush_Child_Thought.stages.Izzy_Moonbow_plush.label>peluche de Izzy Moonbow</MLRP_IzzyPlush_Child_Thought.stages.Izzy_Moonbow_plush.label>
 	
 	<!--EN: Her smile is really pretty!-->
 	<MLRP_IzzyPlush_Child_Thought.stages.Izzy_Moonbow_plush.description>Son sourire est vraiment joli!</MLRP_IzzyPlush_Child_Thought.stages.Izzy_Moonbow_plush.description>
